<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_glucose__data__screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alina.hciprojectdiabetes.Glucose_Data_Screen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/honeydew"
        android:id="@+id/imageView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/graph" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/graph"
        android:layout_centerHorizontal="true"
        android:id="@+id/timefilter">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearly"
            android:layout_weight="1"
            android:text="@string/yearly"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monthly"
            android:layout_weight="1"
            android:text="@string/monthly"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weekly"
            android:layout_weight="1"
            android:text="@string/weekly"/>

    </LinearLayout>

        <Spinner
            android:id="@+id/glucoseTimeDropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/timefilter"
            android:hint="@string/enter_time"
            android:layout_marginTop="30dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

    </RelativeLayout>

</RelativeLayout>
