<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backpacker"
    tools:context="com.example.alina.hciprojectdiabetes.MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/glucopalicon1"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="150dp"
        android:contentDescription="@string/icon"/>
    <Button
        android:id= "@+id/mainLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/mybutton"
        android:text="@string/Login"/>

    <Button
        android:id= "@+id/mainSignupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLoginBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/mybutton"
        android:text="@string/Signup"/>

</RelativeLayout>
