<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_glucose__entry__screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alina.hciprojectdiabetes.Glucose_Entry_Screen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/sweetmorning"
        android:id="@+id/imageView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_glucose"
            android:id="@+id/glucoseTextView"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/glucoseTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:inputType="number"
            android:background="@drawable/edittextstyle"
            android:id="@+id/glucoseReading"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="@string/glucode_units"
            android:textSize="20dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:layout_alignBaseline="@+id/glucoseReading"
            android:layout_alignBottom="@+id/glucoseReading"
            android:layout_toRightOf="@+id/glucoseReading"
            android:layout_toEndOf="@+id/glucoseReading"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />

        <Spinner
            android:id="@+id/glucoseTimeDropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/glucoseReading"
            android:hint="@string/enter_time"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/glucoseTimeDropDownMenu"
            android:text="@string/done"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:id="@+id/Done"/>



    </RelativeLayout>


</RelativeLayout>
