<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Home">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ProgressBar
            android:id="@+id/determinateBar"
            android:layout_width="194dp"
            android:layout_height="170dp"
            android:progress="100"/>

        <FrameLayout
            android:layout_height="120dp"
            android:layout_width="130dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="25dp">

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/glucosecircle"
                android:id="@+id/imageButtonCalorie"
                android:scaleType="fitXY"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/apple"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="17dp"
                android:textAlignment="center"
                android:clickable="false"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:text="@string/calorieEntry"/>

        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ProgressBar
            android:id="@+id/determinateBar2"
            android:layout_width="194dp"
            android:layout_height="170dp"
            android:progress="50" />

        <FrameLayout
            android:layout_height="120dp"
            android:layout_width="130dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="25dp">

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/glucosecircle"
                android:id="@+id/imageButtonSteps"
                android:scaleType="fitXY"
                />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/walking"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:clickable="false"
                android:text="@string/stepsEntry"
                android:fontFamily="monospace"
                android:textColor="@color/black"/>

        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/glucose"
        android:layout_height="200dp"
        android:layout_width="220dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/glucosecircle"
            android:id="@+id/imageButtonGlucose"
            android:scaleType="fitXY"/>
        <!--
               <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:id="@+id/glucoseValue"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/normalglucoseValue"
                    android:text="@string/normalGlucoseValue"/>
        -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/glucoseEntry"
            android:layout_gravity="center"
            android:id="@+id/glucoseheading"
            android:textAlignment="center"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:textColor="@color/black"/>


    </FrameLayout>

    <FrameLayout
        android:layout_height="80dp"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp">

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/glucosecircle"
            android:id="@+id/imageButtonDailyChallenge"
            android:scaleType="fitXY"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:textAlignment="center"
            android:text="@string/dailychallenge"
            android:fontFamily="monospace"
            android:textColor="@color/black"/>

    </FrameLayout>

</RelativeLayout>
